--- a/web/public/index.html
+++ b/web/public/index.html
@@ -23,10 +23,10 @@
                 <hr>
                 <div class="links_navbar">
                     <ul class="navbar">
-                        <li><div class="linka"><a href="">Produto</a></div></li>
-                        <li><div class="linka"><a href="">Solução</a></div></li>
-                        <li><div class="linka"><a href="">Quem somos</a></div></li>
-                        <li><div class="linka"><a href="">Contato</a></div></li>
+                        <li><div class="linka"><a href="#id_produtos">Produto</a></div></li>
+                        <li><div class="linka"><a href="#id_solucao">Solução</a></div></li>
+                        <li><div class="linka"><a href="#id_sobre_nos">Quem somos</a></div></li>
+                        <li><div class="linka"><a href="#id_footer">Contato</a></div></li>
                     </ul>
                 </div>
             </div>
@@ -53,7 +53,7 @@
             </div>
         </div>
     </div>
-    <div class="produtos">
+    <div id="id_produtos" class="produtos">
         <h1>Benefícios do nosso software</h1>
         <span>A Eyes on Server está 100% preparada para os seus negócios:</span>
         <div class="beneficios_superiores">
@@ -93,7 +93,7 @@
             </div>
         </div>
     </div>
-    <div class="banner2">
+    <div id="id_solucao" class="banner2">
         <div class="container">
             <div class="banner2_infocard">
                 <h1>SOLUÇÃO</h1>
@@ -105,7 +105,7 @@
             </div>
         </div>
     </div>
-    <div class="sobre_nos">
+    <div id="id_sobre_nos" class="sobre_nos">
         <div class="container">
             <h1 class="sobre_nos_tit">SOBRE NÓS</h1>
             <div class="sobre_infocard">
@@ -143,7 +143,7 @@
             </div>
         </div>
     </div>
-    <div class="footer">
+    <div id="id_footer" class="footer">
         <div class="container">
             <div class="esquerda_footer">
                 <img src="./img/icon_no_bg.png" class="logo">
