--- a/web/public/denied_user/dashboardGerente.html
+++ b/web/public/denied_user/dashboardGerente.html
@@ -31,10 +31,10 @@
     <div id="wrapper">
 
         <!-- Sidebar -->
-        <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+        <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar" style="    background-image: linear-gradient(180deg,#00A9AF 30%,#13D4DB 80%);">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="./dashboardGerente.html">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="#">
                 <div class="sidebar-brand-text mx-3"><span id="span_nomeEmpresa_exbir"></span></div>
             </a>
 
@@ -142,8 +142,8 @@
                                         </div>
                                     </div>
                                     <div>
-                                        <div class="small text-gray-500">December 12, 2019</div>
-                                        <span class="font-weight-bold">A new monthly report is ready to download!</span>
+                                        <div class="small text-gray-500">Setember 11, 2023</div>
+                                        <span class="font-weight-bold">Chamado aberto para o servidor XPTO</span>
                                     </div>
                                 </a>
                                 <a class="dropdown-item d-flex align-items-center" href="#">
