Fix: Correções de estilo e funções básicas de visualização

--- a/web/public/denied_user/dashboardGerente.html
+++ b/web/public/denied_user/dashboardGerente.html
@@ -31,7 +31,7 @@
     <div id="wrapper">
 
         <!-- Sidebar -->
-        <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar" style="    background-image: linear-gradient(180deg,#00A9AF 30%,#13D4DB 80%);">
+        <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar" style="background-image: linear-gradient(180deg,#00A9AF 30%,#13D4DB 80%);">
 
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="#">
@@ -142,7 +142,7 @@
                                         </div>
                                     </div>
                                     <div>
-                                        <div class="small text-gray-500">Setember 11, 2023</div>
+                                        <div class="small text-gray-500">Setember 12, 2023</div>
                                         <span class="font-weight-bold">Chamado aberto para o servidor XPTO</span>
                                     </div>
                                 </a>
@@ -153,8 +153,8 @@
                                         </div>
                                     </div>
                                     <div>
-                                        <div class="small text-gray-500">December 7, 2019</div>
-                                        $290.29 has been deposited into your account!
+                                        <div class="small text-gray-500">Setember 11, 2023</div>
+                                        Pedido de peças para o servidor XPTO aberto
                                     </div>
                                 </a>
                                 <a class="dropdown-item d-flex align-items-center" href="#">
@@ -164,8 +164,8 @@
                                         </div>
                                     </div>
                                     <div>
-                                        <div class="small text-gray-500">December 2, 2019</div>
-                                        Spending Alert: We've noticed unusually high spending for your account.
+                                        <div class="small text-gray-500">Setember 11, 2023</div>
+                                        Possivel queda do servidor XPTO
                                     </div>
                                 </a>
                                 <a class="dropdown-item text-center small text-gray-500" href="#">Show All Alerts</a>
@@ -187,7 +187,7 @@
                                 
                                 <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Logout
+                                    Sair
                                 </a>
                             </div>
                         </li>
@@ -258,7 +258,7 @@
                                             </div>
                                             <div class="row no-gutters align-items-center">
                                                 <div class="col-auto">
-                                                    <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">08/09/2023</div>
+                                                    <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">11/09/2023</div>
                                                 </div>
                                             </div>
                                         </div>
@@ -402,15 +402,15 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Pronto para partir?</h5>
                     <button class="close" type="button" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">×</span>
                     </button>
                 </div>
-                <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+                <div class="modal-body">Você realmente deseja sair? Você terá que fazer o login novamente</div>
                 <div class="modal-footer">
-                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="login.html">Logout</a>
+                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancelar</button>
+                    <a class="btn btn-primary" href="../login.html">Sair</a>
                 </div>
             </div>
         </div>
