--- a/site/public/login.html
+++ b/site/public/login.html
@@ -1,98 +1,129 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <div id="Modo"><link rel="stylesheet" href="./css/style_mobile_login.css"> <link rel="stylesheet" href="./css/style_mobile_footer_header.css"></div>
-        <link href='https://fonts.googleapis.com/css?family=Lalezar' rel='stylesheet'>
-        <link href='https://fonts.googleapis.com/css?family=IBM Plex Sans Hebrew' rel='stylesheet'>
-        <title>Eye on Server | Login</title>
-    </head>
-<body>
-    <script src="./js/header.js"></script>
-    <div class="div_central">
-        <div class="div_cadastro">
-            <h1>Login</h1>
-            <div>Email: <input type="text" id="emailLogin"></div>
-            <div>Senha: <input type="password" id="senhaLogin"></div>
-            <button onclick="validarLogin()" class="btn_cadastrar">Login</button>
-            <!--<div>Nome: <input type="text" id="id_nomeEmpresa"></div>
-            <div>CNPJ: <input type="text" id="id_cnpj"></div>
-            <div>Email: <input type="text" id="id_emailEmpresa"></div>
-            <button onclick="cadastrarEmpresa()" class="btn_cadastrar">Cadastrar</button>-->
+<html lang="pt-br">
+  <head>
+    <title>Formulário de Cadastro</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+
+    <link rel="stylesheet" href="./css/style_login.css" />
+    <script src="./js/script_login.js"></script>
+  </head>
+
+  <body>
+    <header>
+      <nav class="navbar">
+        <div class="container">
+          <div class="nav-logo">
+            <img src="./img/logo.png" alt="" />
+          </div>
+          <div class="nav-items">
+            <ul class="nav-ul">
+              <li>Home</li>
+              <li>Sobre Nós</li>
+              <li>Nosso Produto</li>
+            </ul>
+          </div>
+          <div class="nav-buttons">
+            <span>Cadastrar</span>
+            <button class="btn btn-entrar">Entrar</button>
+          </div>
         </div>
-    </div>
-    <script src="./js/footer.js"></script>
-</body>
+      </nav>
+    </header>
+
+    <main>
+      <div class="container">
+        <div class="form-area" id="form">
+          <div class="form-title">
+            <h1>Formulário de Cadastro</h1>
+          </div>
+          <div class="block-title">
+            <h4>Informações da Empresa</h4>
+          </div>
+          <div class="enterprise-info-block info-block">
+            <div class="info-line">
+              <div class="input-block">
+                <h4>Nome Fantasia</h4>
+                <input
+                  type="text"
+                  name=""
+                  id=""
+                  placeholder="Nome da Empresa"
+                />
+              </div>
+              <div class="input-block">
+                <h4>CNPJ</h4>
+                <input
+                  id="ipt_cnpj"
+                  type="text"
+                  name=""
+                  id=""
+                  placeholder="XX.XXX.XXX/0001-XX"
+                  maxlength="14"
+                  onchange="mascaraCNPJ()"
+                />
+              </div>
+            </div>
+            <div class="info-line">
+              <div class="input-block">
+                <h4>CEP</h4>
+                <input
+                  id="cep"
+                  type="text"
+                  name=""
+                  placeholder="XXXXX-XXX"
+                  maxlength="8"
+                  onchange="mascaraCEP()"
+                />
+              </div>
+              <div class="input-block">
+                <h4>Email</h4>
+                <input
+                  id="ipt_cep"
+                  type="text"
+                  name=""
+                  placeholder="Email da Empresa"
+                />
+              </div>
+            </div>
+          </div>
+
+          <div class="block-title">
+            <h4>Informações do Primeiro Usuário</h4>
+          </div>
+
+          <div class="admin-info-block info-block">
+            <div class="info-line">
+              <div class="input-block">
+                <h4>Nome Usuário</h4>
+                <input
+                  type="text"
+                  name=""
+                  id=""
+                  placeholder="Nome do Primeiro Usuário"
+                />
+              </div>
+              <div class="input-block">
+                <h4>Email Usuário</h4>
+                <input
+                  type="text"
+                  name=""
+                  id="ipt_email_func"
+                  placeholder="Email do Primeiro Usuário"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="button-block info-block">
+            <button class="btn btn-enviar" onclick="gerarSenha()">
+              Confirmar Dados
+            </button>
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
-
-<script>
-    function validarLogin() {
-        var erro = false;
-        var email = emailLogin.value;
-        var senha = senhaLogin.value;
-
-        if (email.indexOf("@") == -1) {
-            alert("Email inválido");
-            erro = true;
-        }
-        if (!erro) {
-            login();
-        }
-    }
-
-    function login() {
-        var email = emailLogin.value;
-        var senha = senhaLogin.value;
-
-        fetch("/user/login", {
-            method: "POST",
-            headers: {
-                "Content-Type": "application/json"
-            },
-            body: JSON.stringify({
-                email_html: email,
-                senha_html: senha
-            })
-        }).then(function(resposta) {
-
-            if (resposta.ok) {
-                alert("Login realizado com sucesso! Redirecionando para dashboard...");
-                resposta.json().then(json => {
-                    sessionStorage.NOME_USER = json.nome;
-                    sessionStorage.EMAIL_USER = json.email;
-                    sessionStorage.ID_USER = json.idusuario;
-                    sessionStorage.ROOT_USER = json.root;
-                    sessionStorage.EMPRESA_USER = json.fkEmpresa;
-                    sessionStorage.NOME_EMPRESA = '';
-
-                    if(sessionStorage.ROOT_USER == 1){
-                        setTimeout(() => {window.location = "./denied_user/dashboardUsuario.html"}, 1000);
-                    }else if(sessionStorage.ROOT_USER == 2){
-                        setTimeout(() => {window.location = "./denied_user/dashboardGerente.html"}, 1000);
-                    }else if(sessionStorage.ROOT_USER == 3){
-                        setTimeout(() => {window.location = "./denied_user/telaDev.html"}, 1000);
-                    }else{
-                        alert("Houve erro na validação da seção do usuário");
-                    }
-
-                })
-
-            } else {
-                throw("Houve um erro ao realizar o login!");
-            }
-        }).catch(function (resposta){
-            console.log(`#ERRO AO FAZER O LOGIN: ${resposta}`);
-        });
-        return false;
-    }
-
-</script>
-
-<script>
-    var nav_agent = (navigator.userAgent).toUpperCase()
-
-    if(nav_agent.indexOf("ANDROID") == -1 && nav_agent.indexOf("IPHONE") == -1 && nav_agent.indexOf("IPAD") == -1){
-        Modo.innerHTML = '<link rel="stylesheet" href="./css/style_login.css"><link rel="stylesheet" href="./css/style_footer_header.css">'
-    }
-</script>
