deletando arquivos desnecessários

--- a/site/public/cadastro_empresa.html
+++ b/site/public/cadastro_empresa.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
-    <link rel="stylesheet" href="./css/style_login.css" />
+    <link rel="stylesheet" href="./css/style_cadastro.css" />
     <script src="./js/script_login.js"></script>
   </head>
 
