Alterações no css das páginas de login e cadastro

--- a/site/public/cadastro_empresa.html
+++ b/site/public/cadastro_empresa.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title>Formulário de Cadastro</title>
+    <title>Cadastro Eyes on Server</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
-    <link rel="stylesheet" href="./css/style_cadastro.css" />
+    <link
+      rel="shortcut icon"
+      href="./assets/img/logo/logo.png"
+      type="image/x-icon"
+    />
+
+    <link rel="stylesheet" href="./assets/css/style_cadastro.css" />
+    <link rel="stylesheet" href="./assets/css/login.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <script src="./js/script_cadastro.js"></script>
 
     <!-- Link para o toastr -->
@@ -23,6 +31,11 @@
   <body>
     <main>
       <div class="container">
+        <header>
+          <a href="./index.html"
+            ><img src="./assets/img/login/home.png" alt="logo_img"
+          /></a>
+        </header>
         <div class="form-area" id="form">
           <div class="enterprise-info-block info-block">
             <div class="block-title">
