--- a/site/public/login.html
+++ b/site/public/login.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
     <link
       rel="shortcut icon"
-      href="/assets/img/logo/logo01.png"
+      href="./assets/img/logo/logo.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="/assets/css/login.css" />
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/login.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
     <head>
@@ -27,7 +27,10 @@
           <button class="btn-get-started scrollto" onclick="entrar()">
             Entrar
           </button>
-          <p>Não possui uma conta? <a href="">Cadastre-se</a></p>
+          <p>
+            Não possui uma conta?
+            <a href="./cadastro_empresa.html">Cadastre-se</a>
+          </p>
           <p></p>
         </div>
       </section>
