--- a/site/public/index.html
+++ b/site/public/index.html
@@ -51,14 +51,15 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">Sobre nós</a></li>
-          <li><a class="nav-link scrollto" href="#services">Serviço</a></li>
+          <li><a class="nav-link scrollto" href="#services">Produto</a></li>
           <li><a class="nav-link scrollto" href="#team">Equipe</a></li>
           <li>
             <a class="nav-link scrollto" href="#contact">Entre em contato</a>
           </li>
-          <li>
+          <li class="">
             <a class="getstarted scrollto" href="./login.html">Login</a>
           </li>
+          <li><a class="getstarted scrollto" href="./cadastro_empresa.html">Cadastro</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav>
@@ -338,11 +339,11 @@
     <!-- End Skills Section -->
 
     <!-- ======= Cta Section ======= -->
-    <section id="cta" class="cta">
+    <!-- <section id="cta" class="cta">
       <div class="container" data-aos="zoom-in">
         <div class="row">
           <div class="col-lg-9 text-center text-lg-start">
-            <h3>Call To Action</h3>
+            <h3>Fale conosco</h3>
             <p>
               Duis aute irure dolor in reprehenderit in voluptate velit esse
               cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
@@ -355,7 +356,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- End Cta Section -->
 
     <!-- ======= Team Section ======= -->
@@ -543,12 +544,9 @@
     <section id="faq" class="faq section-bg">
       <div class="container" data-aos="fade-up">
         <div class="section-title">
-          <h2>Frequently Asked Questions</h2>
+          <h2>Perguntas frequentes</h2>
           <p>
-            Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-            ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-            quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-            Quia fugiat sit in iste officiis commodi quidem hic quas.
+            Nossos novos clientes normalmente fazem algumas perguntas e para agilizar este processo de contato, aqui estão as duvidas mais frequentes
           </p>
         </div>
 
@@ -643,12 +641,9 @@
     <section id="contact" class="contact">
       <div class="container" data-aos="fade-up">
         <div class="section-title">
-          <h2>Contact</h2>
+          <h2>contato</h2>
           <p>
-            Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-            ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-            quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-            Quia fugiat sit in iste officiis commodi quidem hic quas.
+            Entre em contato com a nossa equipe!
           </p>
         </div>
 
@@ -657,86 +652,67 @@
             <div class="info">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
-                <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <h4>Endereço:</h4>
+                <p>Avenida Rebouças nº 15, COnsolaçao, São paulo, SP</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p></p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <h4>Telefone:</h4>
+                <p>+55 11 955555555</p>
               </div>
-
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
-                frameborder="0" style="border: 0; width: 100%; height: 290px" allowfullscreen></iframe>
-            </div>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.332086354539!2d-46.666810426047924!3d-23.55651367880313!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce582c8cece6fb%3A0x570d6b11321dd84e!2zQXYuIFJlYm91w6dhcywgMTUgLSBDb25zb2xhw6fDo28sIFPDo28gUGF1bG8gLSBTUCwgMDU0MDItMDAw!5e0!3m2!1spt-BR!2sbr!4v1695748011555!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
-                  <label for="name">Your Name</label>
+                  <label for="name">Seu nome</label>
                   <input type="text" name="name" class="form-control" id="name" required />
                 </div>
                 <div class="form-group col-md-6">
-                  <label for="name">Your Email</label>
+                  <label for="name">Seu email</label>
                   <input type="email" class="form-control" name="email" id="email" required />
                 </div>
               </div>
               <div class="form-group">
-                <label for="name">Subject</label>
+                <label for="name">Titulo</label>
                 <input type="text" class="form-control" name="subject" id="subject" required />
               </div>
               <div class="form-group">
-                <label for="name">Message</label>
+                <label for="name">Mensagem</label>
                 <textarea class="form-control" name="message" rows="10" required></textarea>
               </div>
               <div class="my-3">
                 <div class="loading">Loading</div>
                 <div class="error-message"></div>
                 <div class="sent-message">
-                  Your message has been sent. Thank you!
+                  Sua mensagem foi enviada
                 </div>
               </div>
               <div class="text-center">
-                <button type="submit">Send Message</button>
+                <button type="submit">Enviar mensagem</button>
               </div>
             </form>
           </div>
         </div>
       </div>
-    </section>
+    </section>\
     <!-- End Contact Section -->
   </main>
   <!-- End #main -->
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
-    <div class="footer-newsletter">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-6">
-            <h4>Join Our Newsletter</h4>
-            <p>
-              Tamen quem nulla quae legam multos aute sint culpa legam noster
-              magna
-            </p>
-            <form action="" method="post">
-              <input type="email" name="email" /><input type="submit" value="Subscribe" />
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-
+    
     <div class="footer-top">
       <div class="container">
         <div class="row">
