--- a/site/public/dashboard/dashboardGerente.html
+++ b/site/public/dashboard/dashboardGerente.html
@@ -219,8 +219,8 @@
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                                DownTime: Últimas 24h</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">3h 12.5%</div>
+                                                Servidores críticos</div>
+                                            <div class="h5 mb-0 font-weight-bold text-gray-800">14</div>
                                         </div>
                                         <div class="col-auto">
                                             <i class="fas fa-angle-double-down fa-2x text-gray-300"></i>
@@ -237,8 +237,8 @@
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-danger text-uppercase mb-1">
-                                                Previsão de Queda</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">Servidor IB-29</div>
+                                                Servidores em alerta</div>
+                                            <div class="h5 mb-0 font-weight-bold text-gray-800">14</div>
                                         </div>
                                         <div class="col-auto">
                                             <i class="fas fa-memory fa-2x text-gray-300"></i>
@@ -254,11 +254,11 @@
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Ultimo Relatório Emitido
+                                            <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Porcentagem de erro
                                             </div>
                                             <div class="row no-gutters align-items-center">
                                                 <div class="col-auto">
-                                                    <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">11/09/2023</div>
+                                                    <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">14%</div>
                                                 </div>
                                             </div>
                                         </div>
@@ -299,7 +299,7 @@
                                 <!-- Card Header - Dropdown -->
                                 <div
                                     class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                    <h6 class="m-0 font-weight-bold text-primary">Incidentes a cada 4 horas</h6>
+                                    <h6 class="m-0 font-weight-bold text-primary">Incidentes do mês</h6>
                                     <div class="dropdown no-arrow">
                                         <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
                                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -330,7 +330,7 @@
                                 <!-- Card Header - Dropdown -->
                                 <div
                                     class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                    <h6 class="m-0 font-weight-bold text-primary">Servidores com mais incidentes</h6>
+                                    <h6 class="m-0 font-weight-bold text-primary">Incidentes por servidores</h6>
                                     <div class="dropdown no-arrow">
                                         <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
                                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -353,13 +353,13 @@
                                     </div>
                                     <div class="mt-4 text-center small">
                                         <span class="mr-2">
-                                            <i class="fas fa-circle text-primary"></i> Servidor IB-29
+                                            <i class="fas fa-circle text-primary"></i> Maio
                                         </span>
                                         <span class="mr-2">
-                                            <i class="fas fa-circle text-success"></i> Servidor XP-061
+                                            <i class="fas fa-circle text-success"></i> Junho
                                         </span>
                                         <span class="mr-2">
-                                            <i class="fas fa-circle text-info"></i> Servidor I12
+                                            <i class="fas fa-circle text-info"></i> Julho
                                         </span>
                                     </div>
                                 </div>
@@ -392,7 +392,7 @@
     <!-- End of Page Wrapper -->
 
     <!-- Scroll to Top Button-->
-    <a class="scroll-to-top rounded" href="#page-top">
+    <a class="scroll-to-top rounded" href="#page-top"
         <i class="fas fa-angle-up"></i>
     </a>
 
@@ -437,6 +437,6 @@
 
 </html>
 <script>
-    validar_sessao();
+    validarSessao();
     exibirNome();
 </script>
