Backend da página de login concluída

--- a/site/public/cadastro_empresa.html
+++ b/site/public/cadastro_empresa.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./assets/css/style_cadastro.css" />
     <link rel="stylesheet" href="./assets/css/login.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
-    <script src="./js/script_cadastro.js"></script>
+    <script src="./assets/js/script_cadastro.js" defer></script>
 
     <!-- Link para o toastr -->
     <link
