--- a/site/public/dashboard/dashboardUsuario.html
+++ b/site/public/dashboard/dashboardUsuario.html
@@ -262,7 +262,7 @@
           <!-- Begin Page Content -->
           <div class="container-fluid">
             <!-- Page Heading -->
-            <div
+            <!-- <div
               class="header-dash align-items-center justify-content-between mb-4"
             >
               <h1 class="h3 mb-0 text-gray-800">Servidor:</h1>
@@ -270,12 +270,12 @@
                 <option value="01">F34AD</option>
                 <option value="02">A27FF</option>
                 <option value="03">95OAA</option>
-              </select>
-              <!--
+              </select> -->
+            <!--
                             <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
                                 class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>
                             -->
-            </div>
+            <!-- </div> -->
 
             <!-- Content Row -->
             <div class="row">
@@ -286,16 +286,16 @@
                     <div class="row no-gutters align-items-center">
                       <div class="col mr-2">
                         <div
-                          class="text-xs font-weight-bold text-primary text-uppercase mb-1"
+                          class="text-xs font-weight-bold text-primary text-uppercase mb-1 text-danger"
                         >
-                          CPU
+                          Servidores críticos
                         </div>
                         <div class="h5 mb-0 font-weight-bold text-gray-800">
                           70%
                         </div>
                       </div>
                       <div class="col-auto">
-                        <i class="fas fa-microchip fa-2x text-gray-300"></i>
+                        <!-- <i class="fas fa-microchip fa-2x text-gray-300"></i> -->
                       </div>
                     </div>
                   </div>
@@ -304,21 +304,21 @@
 
               <!-- Earnings (Monthly) Card Example -->
               <div class="col-xl-3 col-md-6 mb-4">
-                <div class="card border-left-success shadow h-100 py-2">
+                <div class="card border-left-warning shadow h-0 py-2">
                   <div class="card-body">
                     <div class="row no-gutters align-items-center">
                       <div class="col mr-2">
                         <div
-                          class="text-xs font-weight-bold text-success text-uppercase mb-1"
+                          class="text-xs font-weight-bold text-success text-uppercase mb-1 text-warning"
                         >
-                          RAM
+                          Servidores em alerta
                         </div>
                         <div class="h5 mb-0 font-weight-bold text-gray-800">
                           67%
                         </div>
                       </div>
                       <div class="col-auto">
-                        <i class="fas fa-memory fa-2x text-gray-300"></i>
+                        <!-- <i class="fas fa-memory fa-2x text-gray-300"></i> -->
                       </div>
                     </div>
                   </div>
@@ -334,7 +334,7 @@
                         <div
                           class="text-xs font-weight-bold text-info text-uppercase mb-1"
                         >
-                          Disco
+                          Porcentagem de erro
                         </div>
                         <div class="row no-gutters align-items-center">
                           <div class="col-auto">
@@ -359,7 +359,7 @@
                         </div>
                       </div>
                       <div class="col-auto">
-                        <i class="fas fa-hdd fa-2x text-gray-300"></i>
+                        <!-- <i class="fas fa-hdd fa-2x text-gray-300"></i> -->
                       </div>
                     </div>
                   </div>
@@ -375,14 +375,14 @@
                         <div
                           class="text-xs font-weight-bold text-warning text-uppercase mb-1"
                         >
-                          Alertas
+                          Chamados abertos
                         </div>
                         <div class="h5 mb-0 font-weight-bold text-gray-800">
                           5
                         </div>
                       </div>
                       <div class="col-auto">
-                        <i class="fas fa-comments fa-2x text-gray-300"></i>
+                        <!-- <i class="fas fa-comments fa-2x text-gray-300"></i> -->
                       </div>
                     </div>
                   </div>
@@ -400,11 +400,11 @@
                   <div
                     class="card-header py-3 d-flex flex-row align-items-center justify-content-between"
                   >
-                    <h6 class="m-0 font-weight-bold text-primary">
-                      Porcentagem de uso
+                    <h6 class="m-0 font-weight-bold text-primary text-normal">
+                      Incidentes do dia
                     </h6>
                     <div class="dropdown no-arrow">
-                      <a
+                      <!-- <a
                         class="dropdown-toggle"
                         href="#"
                         role="button"
@@ -416,7 +416,7 @@
                         <i
                           class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"
                         ></i>
-                      </a>
+                      </a> -->
                       <div
                         class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
                         aria-labelledby="dropdownMenuLink"
@@ -448,7 +448,7 @@
                     class="card-header py-3 d-flex flex-row align-items-center justify-content-between"
                   >
                     <h6 class="m-0 font-weight-bold text-primary">
-                      Qtd de Componentes por servidor
+                      Incidentes por servidor
                     </h6>
                     <div class="dropdown no-arrow">
                       <a
@@ -583,7 +583,3 @@
     <script src="js/demo/chart-pie-demo.js"></script>
   </body>
 </html>
-
-<script>
-  exibirNome();
-</script>
