--- a/site/public/dashboard/dashboardGerente.html
+++ b/site/public/dashboard/dashboardGerente.html
@@ -9,8 +9,6 @@
     
     <meta name="description" content="Sistema de Gerenciamento de Servidores da Eyes On Server">
     <meta name="author" content="Equipe Eyes On Server">
-    
-    <script src="../js/index.js"></script>
 
     <title>Dashboard</title>
 
@@ -70,25 +68,6 @@
                         <a class="collapse-item" href="funcionarios.html#div_consulta_funcionario">Consultar</a>
                         <a class="collapse-item" href="funcionarios.html#div_atualizacao_funcionario">Atualizar</a>
                         <a class="collapse-item" href="funcionarios.html#div_exclusao_funcionario">Deletar</a>
-                    </div>
-                </div>
-            </li>
-
-            <!-- Nav Item - Utilities Collapse Menu -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
-                    aria-expanded="true" aria-controls="collapseUtilities">
-                    <i class="fas fa-fw fa-server"></i>
-                    <span>Servidores</span>
-                </a>
-                <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
-                    data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Opções:</h6>
-                        <a class="collapse-item" href="servidores.html">Cadastrar</a>
-                        <a class="collapse-item" href="servidores.html#div_consulta_servidor">Consultar</a>
-                        <a class="collapse-item" href="servidores.html#div_atualizacao_servidor">Atualizar</a>
-                        <a class="collapse-item" href="servidores.html#div_exclusao_servidor">Deletar</a>
                     </div>
                 </div>
             </li>
@@ -219,29 +198,11 @@
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                                Servidores críticos</div>
+                                                Quantidade de Alertas CPU</div>
                                             <div class="h5 mb-0 font-weight-bold text-gray-800">14</div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-angle-double-down fa-2x text-gray-300"></i>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- Earnings (Monthly) Card Example -->
-                        <div class="col-xl-3 col-md-6 mb-4">
-                            <div class="card border-left-danger shadow h-100 py-2">
-                                <div class="card-body">
-                                    <div class="row no-gutters align-items-center">
-                                        <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-danger text-uppercase mb-1">
-                                                Servidores em alerta</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">14</div>
-                                        </div>
-                                        <div class="col-auto">
-                                            <i class="fas fa-memory fa-2x text-gray-300"></i>
+                                            <i class="fas fa-microchip fa-2x text-gray-300"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -254,7 +215,26 @@
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Porcentagem de erro
+                                            <div class="text-xs font-weight-bold text-info text-uppercase mb-1">
+                                                Quantidade de Alertas RAM</div>
+                                            <div class="h5 mb-0 font-weight-bold text-gray-800">14</div>
+                                        </div>
+                                        <div class="col-auto">
+                                            <i class="fas fa-memory fa-2x text-gray-300"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Earnings (Monthly) Card Example -->
+                        <div class="col-xl-3 col-md-6 mb-4">
+                            <div class="card border-left-primary shadow h-100 py-2">
+                                <div class="card-body">
+                                    <div class="row no-gutters align-items-center">
+                                        <div class="col mr-2">
+                                            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                                                Quantidade de Alertas Disco
                                             </div>
                                             <div class="row no-gutters align-items-center">
                                                 <div class="col-auto">
@@ -263,7 +243,7 @@
                                             </div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-file-pdf fa-2x text-gray-300"></i>
+                                            <i class="fas fa-compact-disc fa-2x text-gray-300"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -272,16 +252,16 @@
 
                         <!-- Pending Requests Card Example -->
                         <div class="col-xl-3 col-md-6 mb-4">
-                            <div class="card border-left-warning shadow h-100 py-2">
+                            <div class="card border-left-info shadow h-100 py-2">
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
-                                                Chamados Abertos</div>
+                                            <div class="text-xs font-weight-bold text-info text-uppercase mb-1">
+                                                Total de Alertas</div>
                                             <div class="h5 mb-0 font-weight-bold text-gray-800">5</div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-comments fa-2x text-gray-300"></i>
+                                            <i class="fas fa-chart-pie fa-2x text-gray-300"></i>
                                         </div>
                                     </div>
                                 </div>
