alterando cores gráfico de pizza

--- a/site/public/dashboard/dashboardGerente.html
+++ b/site/public/dashboard/dashboardGerente.html
@@ -355,13 +355,13 @@
                                     </div>
                                     <div class="mt-4 text-center small">
                                         <span class="mr-2">
-                                            <i class="fas fa-circle text-danger"></i> Emergência
+                                            <i class="fas fa-circle text-emergency"></i> Emergência
                                         </span>
                                         <span class="mr-2">
-                                            <i class="fas fa-circle text-hot"></i> Perigo
+                                            <i class="fas fa-circle text-hazard"></i> Perigo
                                         </span>
                                         <span class="mr-2">
-                                            <i class="fas fa-circle text-warning"></i> Prevenção
+                                            <i class="fas fa-circle text-prevention"></i> Prevenção
                                         </span>
                                     </div>
                                 </div>
